[metadata]
name = mkdocs-typedoc
version = 1.0.2
description = MkDocs plugin to generate documentation from TypeScript source code using TypeDoc.
keywords = mkdocs plugin
url = https://github.com/JakubAndrysek/mkdocs-typedoc
author = Jakub Andrýsek
author_email = email@kubaandrysek.cz
project_urls =
    Source = https://github.com/JakubAndrysek/mkdocs-typedoc
    Documentation = https://typedoc.kubaandrysek.cz/
    Tracker = https://github.com/JakubAndrysek/mkdocs-typedoc/issues
    Funding = https://github.com/sponsors/jakubandrysek

license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    mkdocs
packages = find:
include_package_data = True

[options.entry_points]
mkdocs.plugins =
    typedoc = typedoc.plugin:TypeDocPlugin

[options.extras_require]
dev =
    mkdocs-material
    mkdocs-open-in-new-tab
    mkdocs-glightbox
    mkdocs-git-revision-date-localized-plugin
